<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.lavaliva.market.OformlenieZakaza">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layUpOplata"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shirinaPanelek"
        android:background="@android:color/background_dark"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sposob_oplati"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/shrift_sredniy"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton6"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_name" />


    </android.support.constraint.ConstraintLayout>

    <RadioGroup
        android:id="@+id/rgroupSposobOplati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layUpOplata">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_otstup"
            android:layout_weight="1"
            android:checked="false"

            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorSingle"
            android:text="@string/kurier"
            android:textSize="@dimen/shrift_sredniy" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_otstup"
            android:layout_weight="1"
            android:text="@string/punkt"

            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorSingle"
            android:textSize="@dimen/shrift_sredniy" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_otstup"
            android:layout_weight="1"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorSingle"
            android:text="@string/post"
            android:textSize="@dimen/shrift_sredniy" />
    </RadioGroup>

    <Switch
        android:id="@+id/swSposobOplUmolh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/adres_umolhanie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rgroupSposobOplati"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgroupSposobOplati" />

</android.support.constraint.ConstraintLayout>
