<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvIzmenitAdres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/tvSposobDostavki"
            android:gravity="center_vertical"
            android:text="@string/izmenit"
            android:textAllCaps="true"
            android:textColor="@color/colorNazvanie"
            android:textSize="@dimen/shrift_sredniy"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSposobDostavki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingBottom="@dimen/standartdp"
            android:paddingLeft="20dp"
            android:text="@string/kurier"
            android:textAllCaps="false"
            android:textColor="@color/colorCena"
            android:textSize="@dimen/shrift_sredniy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sposob_oplati"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/shrift_sredniy"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <android.support.constraint.ConstraintLayout
            android:id="@+id/cnBottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/otstup_mejdu_panelkami_micro"
            android:background="@color/razdelenie_mezdu_panelkami_temnoe_uzkoe"
            app:layout_constraintBottom_toBottomOf="parent">

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

